# MPI_lab_1

./: .gitignore  CMakeLists.txt  Lab1_excel.xlsx  README.md
Labs/: CMakeLists.txt
Labs/Lab1g/: lab1g.cpp
Labs/Lab2g/: lab2g.cpp
Labs/LabBasic/: lab_basic.cpp
